--- a/NEOnotmetrics Frontend/app/templates/app/RestResponse.html
+++ b/NEOnotmetrics Frontend/app/templates/app/RestResponse.html
@@ -17,7 +17,57 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
-        <title>OntoMetrics - Metric Calculation</title>
+         <title>OntoMetrics - Metric Calculation</title>
+         <script type="text/javascript">
+
+          $(function () {
+         $('#id1').on("click", function () {
+              $('#table1').toggle();
+          });});
+          $(function () {
+         $('#id2').on("click", function () {
+              $('#table2').toggle();
+          });});
+          $(function () {
+         $('#id3').on("click", function () {
+              $('#table3').toggle();
+          });});
+          $(function () {
+         $('#id4').on("click", function () {
+              $('#table4').toggle();
+          });});
+          $(function () {
+         $('#id5').on("click", function () {
+              $('#table5').toggle();
+          });});
+          $(function () {
+         $('#id6').on("click", function () {
+              $('#table6').toggle();
+          });});
+          $(function () {
+         $('#id7').on("click", function () {
+              $('#table7').toggle();
+          });});
+          $(function () {
+         $('#id8').on("click", function () {
+              $('#table8').toggle();
+          });});
+          $(function () {
+         $('#id9').on("click", function () {
+              $('#table9').toggle();
+          });});
+          $(function () {
+         $('#id10').on("click", function () {
+              $('#table10').toggle();
+          });});
+          $(function () {
+         $('#id11').on("click", function () {
+              $('#table11').toggle();
+          });});
+
+        </script>
+
+
     </head>
   <body>
 <!--Navigation bar-->
@@ -30,7 +80,8 @@
       <br>
 
       <h4>Basic Information: </h4>
-      <table border="1">
+      <div id="id1">Hide/Show</div>
+      <table border="1" id="table1" style="display:block;">
       <tr>
          <th>created：</th>
          <td id="created"></td>
@@ -54,7 +105,8 @@
       </table>
 
       <h4>Metrics Information: </h4>
-      <table border="1">
+      <div id="id2">Hide/Show</div>
+      <table border="1" id="table2" style="display:block;">
       <tr>
          <th>Commit Time：</th>
          <td id="ct"></td>
@@ -83,7 +135,8 @@
 
     <h4>Ontology Metrics Information: </h4>
       <h4>Base Metrics: </h4>
-      <table border="1">
+      <div id="id3">Hide/Show</div>
+      <table border="1" id="table3" style="display:block;">
       <tr>
          <th>Reading Error：</th>
          <td id="obj101"></td>
@@ -131,7 +184,8 @@
       </table>
 
       <h4>Class Axioms: </h4>
-      <table border="1">
+      <div id="id4">Hide/Show</div>
+      <table border="1" id="table4" style="display:block;">
       <tr>
          <th>DLexpressivity：</th>
          <td id="obj201"></td>
@@ -151,7 +205,8 @@
       </table>
 
       <h4>Object Property Axioms: </h4>
-      <table border="1">
+      <div id="id5">Hide/Show</div>
+      <table border="1" id="table5" style="display:block;">
       <tr>
          <th>Hidden GCI Count：</th>
          <td id="obj301"></td>
@@ -211,7 +266,8 @@
       </table>
 
       <h4>Data Property Axioms: </h4>
-      <table border="1">
+      <div id="id6">Hide/Show</div>
+      <table border="1" id="table6" style="display:block;">
       <tr>
          <th>Equivalent Data Properties Axioms Count：</th>
          <td id="obj401"></td>
@@ -235,7 +291,8 @@
       </table>
 
       <h4>Individual Axioms: </h4>
-      <table border="1">
+      <div id="id7">Hide/Show</div>
+      <table border="1" id="table7" style="display:block;">
       <tr>
          <th>Object Property Assertion Axioms Count：</th>
          <td id="obj501"></td>
@@ -267,7 +324,8 @@
       </table>
 
       <h4>Annotation Axioms: </h4>
-      <table border="1">
+      <div id="id8">Hide/Show</div>
+      <table border="1" id="table8" style="display:block;">
       <tr>
          <th>Annotation Property Domain Axioms Count：</th>
          <td id="obj601"></td>
@@ -287,7 +345,8 @@
       </table>
 
       <h4>Schema Metrics: </h4>
-      <table border="1">
+      <div id="id9">Hide/Show</div>
+      <table border="1" id="table9" style="display:block;">
       <tr>
          <th>Attribute Class Rratio：</th>
          <td id="obj701"></td>
@@ -327,7 +386,8 @@
       </table>
 
       <h4>Knowledge Base Metrics: </h4>
-      <table border="1">
+      <div id="id10">Hide/Show</div>
+      <table border="1" id="table10" style="display:block;">
       <tr>
          <th>Absolute Sibling Cardinality：</th>
          <td id="obj801"></td>
@@ -339,7 +399,8 @@
       </table>
 
       <h4>Graph Metrics: </h4>
-      <table border="1">
+      <div id="id11">Hide/Show</div>
+      <table border="1" id="table11" style="display:block;">
       <tr>
          <th>Maximal Depth：</th>
          <td id="obj901"></td>
