--- a/NEOnotmetrics Frontend/app/templates/app/RestResponse.html
+++ b/NEOnotmetrics Frontend/app/templates/app/RestResponse.html
@@ -30,7 +30,8 @@
       <br>
 
       <h4>Basic Information: </h4>
-      <table border="1">
+      <div id="id1">Hide/Show</div>
+      <table border="1" id="table1" style="display:block;">
       <tr>
          <th>created：</th>
          <td id="created"></td>
@@ -54,7 +55,8 @@
       </table>
 
       <h4>Metrics Information: </h4>
-      <table border="1">
+      <div id="id2">Hide/Show</div>
+      <table border="1" id="table2" style="display:block;">
       <tr>
          <th>Commit Time：</th>
          <td id="ct"></td>
@@ -83,7 +85,8 @@
 
     <h4>Ontology Metrics Information: </h4>
       <h4>Base Metrics: </h4>
-      <table border="1">
+      <div id="id3">Hide/Show</div>
+      <table border="1" id="table3" style="display:block;">
       <tr>
          <th>Reading Error：</th>
          <td id="obj101"></td>
@@ -131,7 +134,8 @@
       </table>
 
       <h4>Class Axioms: </h4>
-      <table border="1">
+      <div id="id4">Hide/Show</div>
+      <table border="1" id="table4" style="display:block;">
       <tr>
          <th>DLexpressivity：</th>
          <td id="obj201"></td>
@@ -151,7 +155,8 @@
       </table>
 
       <h4>Object Property Axioms: </h4>
-      <table border="1">
+      <div id="id5">Hide/Show</div>
+      <table border="1" id="table5" style="display:block;">
       <tr>
          <th>Hidden GCI Count：</th>
          <td id="obj301"></td>
@@ -211,7 +216,8 @@
       </table>
 
       <h4>Data Property Axioms: </h4>
-      <table border="1">
+      <div id="id6">Hide/Show</div>
+      <table border="1" id="table6" style="display:block;">
       <tr>
          <th>Equivalent Data Properties Axioms Count：</th>
          <td id="obj401"></td>
@@ -235,7 +241,8 @@
       </table>
 
       <h4>Individual Axioms: </h4>
-      <table border="1">
+      <div id="id7">Hide/Show</div>
+      <table border="1" id="table7" style="display:block;">
       <tr>
          <th>Object Property Assertion Axioms Count：</th>
          <td id="obj501"></td>
@@ -267,7 +274,8 @@
       </table>
 
       <h4>Annotation Axioms: </h4>
-      <table border="1">
+      <div id="id8">Hide/Show</div>
+      <table border="1" id="table8" style="display:block;">
       <tr>
          <th>Annotation Property Domain Axioms Count：</th>
          <td id="obj601"></td>
@@ -287,7 +295,8 @@
       </table>
 
       <h4>Schema Metrics: </h4>
-      <table border="1">
+      <div id="id9">Hide/Show</div>
+      <table border="1" id="table9" style="display:block;">
       <tr>
          <th>Attribute Class Rratio：</th>
          <td id="obj701"></td>
@@ -327,7 +336,8 @@
       </table>
 
       <h4>Knowledge Base Metrics: </h4>
-      <table border="1">
+      <div id="id10">Hide/Show</div>
+      <table border="1" id="table10" style="display:block;">
       <tr>
          <th>Absolute Sibling Cardinality：</th>
          <td id="obj801"></td>
@@ -339,7 +349,8 @@
       </table>
 
       <h4>Graph Metrics: </h4>
-      <table border="1">
+      <div id="id11">Hide/Show</div>
+      <table border="1" id="table11" style="display:block;">
       <tr>
          <th>Maximal Depth：</th>
          <td id="obj901"></td>
