--- a/Opi/.settings/org.eclipse.wst.common.component
+++ b/Opi/.settings/org.eclipse.wst.common.component
@@ -1,17 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        
-    <wb-module deploy-name="owlapi-distribution-4.5.4">
-                
-        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                
-        <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-                
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-                
-        <property name="context-root" value="owlapi-distribution"/>
-                
-        <property name="java-output-path" value="/owlapi-distribution/target/classes"/>
-            
-    </wb-module>
+                                
     
+    
+    
+    
+    
+    
+    <wb-module deploy-name="ROOT">
+                                
+        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                                                
+        
+        
+        
+        
+        <property name="context-root" value="ROOT"/>
+        <property name="java-output-path" value="/owlapi-distribution/target/classes"/>
+                                                            
+    
+    
+    
+    
+    
+    
+    </wb-module>
+                            
+
+
+
+
+
+
 </project-modules>
