Bugfixed the classimport statements of the GraphMetric Calculation

--- a/Opi/.settings/org.eclipse.wst.common.component
+++ b/Opi/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                
+                                    
+    
     
     
     
@@ -7,20 +8,25 @@
     
     
     <wb-module deploy-name="ROOT">
-                                
+                                        
+        
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                
+                                                        
+        
         
         
         
         
         <property name="context-root" value="ROOT"/>
+                
         <property name="java-output-path" value="/owlapi-distribution/target/classes"/>
-                                                            
+                                                                    
+    
     
     
     
@@ -28,7 +34,8 @@
     
     
     </wb-module>
-                            
+                                
+
 
 
 
